# nZEMAX

./: CMakeLists.txt
src/: config.h  main.cpp
src/color/: color.cpp  color.h
src/csystem/: coordinate_system.cpp  coordinate_system.h
src/sphere/: sphere.cpp  sphere.h
src/vector/: vector.cpp  vector.h
